[gd_scene load_steps=6 format=2]

[ext_resource path="res://aban/ai/ai.gd" type="Script" id=1]
[ext_resource path="res://aban/ai/perception.gd" type="Script" id=2]
[ext_resource path="res://aban/ai/memory.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 379.01, 379.009 )

[sub_resource type="CircleShape2D" id=2]
radius = 85.0

[node name="AI" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Memory" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Sight" type="Area2D" parent="."]
input_pickable = false
monitorable = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
position = Vector2( 488, 0 )
rotation = 0.785397
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 2 )

[node name="Perception" type="Node" parent="."]
script = ExtResource( 2 )

[node name="RayCast" type="RayCast2D" parent="."]
exclude_parent = false
cast_to = Vector2( 50, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Empty" type="Node" parent="."]

[node name="TargetOnSightLastPosition" type="Position2D" parent="Empty"]
__meta__ = {
"_edit_lock_": true
}

[node name="CustomLookPosition" type="Position2D" parent="Empty"]
__meta__ = {
"_edit_lock_": true
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Sight" to="Perception" method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="Perception" method="_on_Sight_body_exited"]
